/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.loopring.lightcone.common.data;

enum XMarketSide {
  SELL =0;
  BUY = 1;
}

enum XOrderStatus {
    NEW = 0;
    PENDING = 1;
    EXPIRED = 2;
    DUST_ORDER = 3;
    PARTIALLY_FILLED = 4;
    COMPLETELY_FILLED = 5; // 完全成交
    INVALID_DATA = 6;
    UNSUPPORTED_MARKET = 7;
    CANCELLED_BY_USER = 8;
    CANCELLED_LOW_BALANCE = 9;
    CANCELLED_LOW_FEE_BALANCE = 10;
    CANCELLED_TOO_MANY_ORDERS = 11;
    CANCELLED_TOO_MANY_FAILED_SETTLEMENTS = 12;
}

message XMarketId {
    string primary = 1;
    string secondary = 2;
}

message XMarketManagerConfig {
    int32 maxNumbersOfOrders = 1;
    int32 priceDecimals = 2;
}
